src/userprofile/deploy/userprofile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: tripinsights-api
  labels:
    app: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registrypvp6623.azurecr.io/tripinsights/userprofile:1.0
        ports:
          - containerPort: 8080
            name: http
          - containerPort: 443
            name: https
