src/userprofile/deploy/userprofile-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userprofile-ingress
  namespace: tripinsights-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: userprofile
            port:
              number: 8080
      - path: /api/docs/user
        pathType: Prefix
        backend:
          service:
            name: userprofile
            port:
              number: 8080
